--- a/app/src/main/res/layout/activity_pop_up_id_proofs.xml
+++ b/app/src/main/res/layout/activity_pop_up_id_proofs.xml
@@ -7,14 +7,17 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.comfostays.activities.PopUpIdProofs">
+    tools:context="com.comfostays.activities.PopUpIdProofs"
+    android:background="#ffffff">
 
     <ImageView
-        android:layout_width="300dp"
-        android:layout_height="300dp"
+        android:layout_width="400dp"
+        android:layout_height="400dp"
         android:id="@+id/popUpIdProofs_imageView"
         android:contentDescription="@string/description"
         android:layout_alignParentTop="true"
+        android:scaleType="fitStart"
+        android:adjustViewBounds="true"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="42dp" />
 
