--- a/app/src/main/res/layout/activity_owner_add_tenant.xml
+++ b/app/src/main/res/layout/activity_owner_add_tenant.xml
@@ -9,4 +9,261 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.comfostays.activities.owner_activities.tenant_activities.OwnerAddTenantActivity">
 
+    <include android:id="@+id/layout_header"
+        layout="@layout/layout_header"/>
+
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/scrollView_joinProperty"
+        android:layout_above="@+id/button_join"
+        android:layout_below="@+id/layout_header"
+        android:layout_alignParentStart="true"
+        android:layout_marginTop="20dp">
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <ImageView
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:id="@+id/imageView_propertyid"
+                android:src="@drawable/building_icon"
+                android:padding="5dp" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/textView_propertyId"
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:text="Property Id"
+                android:layout_toEndOf="@+id/imageView_propertyid"
+                android:layout_marginTop="20dp"
+                android:layout_marginStart="5dp" />
+
+            <EditText
+                android:layout_width="175dp"
+                android:layout_height="40dp"
+                android:id="@+id/editText_propertyId"
+                android:hint="PROPERTY ID"
+                android:background="@drawable/rounded_edittext"
+                android:gravity="center"
+                android:layout_marginTop="10dp"
+                android:layout_alignParentEnd="true"
+                android:layout_marginEnd="10dp" />
+
+
+
+            <ImageView
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:id="@+id/imageView_customerName"
+                android:layout_below="@+id/imageView_propertyid"
+                android:src="@drawable/name_icon"
+                android:padding="5dp"
+                android:layout_marginTop="10dp" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/textView_customerName"
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:layout_below="@+id/textView_propertyId"
+                android:layout_toEndOf="@+id/imageView_customerName"
+                android:text="NAME"
+                android:layout_marginTop="30dp" />
+
+            <EditText
+                android:layout_width="175dp"
+                android:layout_height="40dp"
+                android:id="@+id/editText_customerName"
+                android:inputType="textPersonName"
+                android:ems="10"
+                android:layout_below="@+id/textView_propertyId"
+                android:background="@drawable/rounded_edittext"
+                android:layout_marginTop="20dp"
+                android:gravity="center"
+                android:hint="NAME"
+                android:layout_alignParentEnd="true"
+                android:layout_marginEnd="10dp" />
+
+            <ImageView
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:id="@+id/imageView_roomNumber"
+                android:layout_below="@+id/imageView_customerName"
+                android:src="@drawable/room_number_icon"
+                android:padding="5dp" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/textView_roomNumber"
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:layout_below="@+id/textView_customerName"
+                android:text="Room No."
+                android:layout_toEndOf="@+id/imageView_roomNumber"
+
+                android:layout_marginTop="30dp" />
+
+            <EditText
+                android:layout_width="175dp"
+                android:layout_height="40dp"
+                android:inputType="textPersonName"
+                android:ems="10"
+                android:id="@+id/editText_roomNumber"
+                android:layout_below="@+id/editText_customerName"
+                android:background="@drawable/rounded_edittext"
+                android:layout_marginTop="10dp"
+                android:gravity="center"
+                android:hint="ROOM NUMBER"
+                android:layout_alignParentEnd="true"
+                android:layout_marginEnd="10dp" />
+
+            <ImageView
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:id="@+id/imageView_rentAmount"
+                android:layout_below="@+id/imageView_roomNumber"
+                android:src="@drawable/rent_image"
+                android:padding="5dp" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/textView_rentAmount"
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:layout_below="@+id/textView_roomNumber"
+                android:text="Rent Amount"
+                android:layout_toEndOf="@+id/imageView_roomNumber"
+                android:layout_marginTop="30dp" />
+
+            <EditText
+                android:layout_width="175dp"
+                android:layout_height="40dp"
+                android:ems="10"
+                android:id="@+id/editText_rentAmount"
+                android:layout_below="@+id/editText_roomNumber"
+                android:background="@drawable/rounded_edittext"
+                android:layout_marginTop="10dp"
+                android:gravity="center"
+                android:hint="AMOUNT"
+                android:layout_alignParentEnd="true"
+                android:layout_marginEnd="10dp" />
+
+            <ImageView
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:id="@+id/imageView_advanceAmount"
+                android:layout_below="@+id/imageView_rentAmount"
+                android:src="@drawable/advance_image"
+                android:padding="5dp" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/textView_advanceAmount"
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:layout_below="@+id/textView_rentAmount"
+                android:text="Advance"
+                android:layout_toEndOf="@+id/imageView_roomNumber"
+                android:layout_marginTop="30dp" />
+
+            <EditText
+                android:layout_width="175dp"
+                android:layout_height="40dp"
+                android:ems="10"
+                android:id="@+id/editText_advanceAmount"
+                android:layout_below="@+id/editText_rentAmount"
+                android:background="@drawable/rounded_edittext"
+                android:layout_marginTop="10dp"
+                android:gravity="center"
+                android:hint="AMOUNT"
+                android:layout_alignParentEnd="true"
+                android:layout_marginEnd="10dp" />
+
+            <ImageView
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:id="@+id/imageView_uploadIdProofOne"
+                android:layout_below="@+id/imageView_advanceAmount"
+                android:src="@drawable/upload_image"
+                android:padding="5dp" />
+
+            <ImageView
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:id="@+id/imageView_uploadIdProofTwo"
+                android:layout_below="@+id/imageView_uploadIdProofOne"
+                android:src="@drawable/upload_image"
+                android:padding="5dp" />
+
+            <RadioGroup
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_below="@+id/imageView_uploadIdProofTwo"
+                android:orientation="horizontal"
+                android:layout_centerHorizontal="true"
+                android:layout_marginLeft="10dp"
+                android:layout_marginTop="10dp"
+                android:id="@+id/radiogroup_rent">
+
+                <RadioButton
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="Rent Paid"
+                    android:id="@+id/radioButton_rentPaid" />
+
+                <RadioButton
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="Rent Not Paid"
+                    android:id="@+id/radioButton_rentNotPaid" />
+            </RadioGroup>
+
+            <RadioGroup
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_below="@+id/radiogroup_rent"
+                android:orientation="horizontal"
+                android:layout_centerHorizontal="true"
+                android:layout_marginLeft="10dp"
+                android:layout_marginTop="10dp"
+                android:id="@+id/radiogroup_advance">
+
+                <RadioButton
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="Advance Paid"
+                    android:id="@+id/radioButton_advancePaid" />
+
+                <RadioButton
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="Advance Not Paid"
+                    android:id="@+id/radioButton_advanceNotPaid" />
+            </RadioGroup>
+
+
+        </RelativeLayout>
+    </ScrollView>
+
+    <Button
+        android:layout_height="50dp"
+        android:layout_width="match_parent"
+        android:layout_gravity="center_horizontal"
+        android:id="@+id/button_join"
+        android:onClick="onClickJoin"
+        android:background="#2E9AFE"
+        android:textColor="@drawable/button_text_color"
+        android:text="ADD"
+        android:textSize="18sp"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true" />
+
 </RelativeLayout>
