--- a/app/src/main/res/layout/activity_pop_up_id_proofs.xml
+++ b/app/src/main/res/layout/activity_pop_up_id_proofs.xml
@@ -19,24 +19,24 @@
         android:scaleType="fitStart"
         android:adjustViewBounds="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="42dp"
-        android:visibility="invisible" />
+        android:layout_marginTop="42dp" />
 
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/close"
         android:id="@+id/popUpIdProofs_button"
+        android:layout_marginTop="32dp"
+        android:onClick="onClickClose"
         android:layout_below="@+id/popUpIdProofs_imageView"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="31dp"
-        android:onClick="onClickClose" />
+        android:layout_alignParentStart="true" />
 
-    <ProgressBar
-        style="?android:attr/progressBarStyleLarge"
+    <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/progressBar_imageLoadingProgress"
-        android:layout_alignTop="@+id/popUpIdProofs_imageView"
-        android:layout_centerHorizontal="true" />
+        android:text="Download"
+        android:id="@+id/button_download"
+        android:layout_alignTop="@+id/popUpIdProofs_button"
+        android:layout_alignEnd="@+id/popUpIdProofs_imageView"
+        android:onClick="onClickDownload" />
 </RelativeLayout>
